--- a/ronit_codes/pubspec.yaml
+++ b/ronit_codes/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   rive: 0.9.1
+  google_fonts: 
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,6 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/coverImagePlaceholder.gif
+    - assets/images/5154-10355-joystick-demos-fish.riv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
